--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,14 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/txtViewMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Broadcast Receiver Has Started!"
+        android:text="Broadcast Receiver Started! \n Listening to SMS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAlignment="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
